fix(main): restore wrappers, should fix resizing behavior
* Restores main wrappers from the original Vue component, some of these
  are needed to preserve layout, while also in some cases separating the
  styles from the rendered component, e.g. footer, sidebar, where styles
  would be merged weirdly.
* `overflow: auto` is apparently required and that's what it seems to
  fix the cutoff at the bottom, combined with the above.
* Cleanup needed.

--- a/app/components-react/windows/Main.m.less
+++ b/app/components-react/windows/Main.m.less
@@ -20,14 +20,17 @@
   flex-grow: 1;
   height: 100%;
   position: relative;
+  overflow: auto;
 }
 
 .main-contents--right {
-  grid-template-columns: [sidebar] auto [livedock] auto [page] 1fr;
+  //grid-template-columns: [sidebar] auto [livedock] auto [page] 1fr;
+  grid-template-columns: auto auto 1fr;
 }
 
 .main-contents--left {
-  grid-template-columns: [sidebar] auto [page] 1fr [livedock] auto;
+  //grid-template-columns: [sidebar] auto [page] 1fr [livedock] auto;
+  grid-template-columns: auto 1fr auto;
 }
 
 .main-contents--onboarding {
